# Cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh
Chap1_Overview/Ex1_Translation_Pipeline/: main.cpp  main.i
Chap1_Overview/Ex2_Name_Mangling/: math_funcs.cpp
Chap1_Overview/Ex3_ODR_Violation/: global.h  moduleA.cpp  moduleB.cpp
Chap1_Overview/Ex4_Stack_Heap_Memory/: memory_layout  memory_layout.cpp
Chap2_Type_System/Ex1_Narrowing_Conversion/: narrowing.cpp
Chap2_Type_System/Ex2_Constexpr_Consteval/: compile_time.cpp
Chap2_Type_System/Ex3_Cpp_casts/: bad_cast.cpp  cpp_casts.cpp
Chap2_Type_System/Ex4_IO_Optimization/: io_speed  io_speed.cpp
Chap3_Expressions_Operators/Ex1_short_circuit/: short_circuit.cpp
Chap3_Expressions_Operators/Ex2_bit_manipulation/: bit_flags.cpp
Chap3_Expressions_Operators/Ex3_Expressions/: ap  init_if.cpp
Chap3_Expressions_Operators/Ex4_Loop_Unrolling/: loop.cpp
Chap4_Array_Pointer/Ex1_Buffer_Overflow/: overflow.cpp
Chap4_Array_Pointer/Ex2_Vector_growth/: vector_growth.cpp
Chap4_Array_Pointer/Ex3_Range_For_Loop/: range_for.cpp
Chap4_Array_Pointer/Ex4_Ref_Ptr/: ref_ptr.cpp
src/part1_core_architecture/: CMakeLists.txt
src/part1_core_architecture/Chap1_translation_pipeline/1_1_name_mangling/: math.cpp
src/part1_core_architecture/Chap1_translation_pipeline/1_2_odr_link_time/: config.h  moduleA.cpp  moduleB.cpp
src/part1_core_architecture/Chap2_types_expressions/2_1_ieee754_float/: main.cpp
src/part1_core_architecture/Chap2_types_expressions/2_2_consteval_array/: main.cpp
